# HART_CS_2020

./: CMakeLists.txt  LICENSE  README.md  TelemKalmanVoltage.cpp  TelemKalmanVoltage.h  TelemParser.cpp  TelemParser.h  TelemSensorData.h  TelemString.cpp  TelemString.h  main.cpp
Criticisms/: changes.md
Data/: 2020-01-27-serial-3083-flight-0024-via-2881.telem
TelemStringTypes/: TelemGPS.cpp  TelemGPS.h  TelemKalmanVoltage.cpp  TelemKalmanVoltage.h  TelemSensorData.cpp  TelemSensorData.h
